[package]
name = "fuse_file_access_monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
env_logger = "0.11.8"
fuser = {git="https://github.com/cberner/fuser.git", features = ["abi-7-40"]}
iced = {version="0.13.1", features=["markdown"]}
libc = "0.2.172"
tokio = {version="1.45.1", features=["full"]}
